--- a/pages/main/index.wxss
+++ b/pages/main/index.wxss
@@ -1,4 +1,7 @@
 /**index.wxss**/
+page,.main{
+  height: 100%;
+}
 .header {
   width: 100%;
   height: 160rpx;
@@ -36,7 +39,6 @@ border: 1px solid black;
   color: #fff;
   opacity: 0.6;
   display: flex;
-  justify-content: left;
   align-items: center;
 }
 
@@ -54,7 +56,6 @@ border: 1px solid black;
   font-size: 64rpx;
   padding-left: 24rpx;
   display: flex;
-  justify-content: left;
   align-items: center;
 }
 
@@ -204,4 +205,10 @@ image{
   font-size: 20rpx;
   color: #717476;
   margin-bottom: 6rpx;
+}
+
+.main_scro{
+  height: 100%;
+  overflow: hidden;
+  
 }
