--- a/pages/main/index.wxml
+++ b/pages/main/index.wxml
@@ -50,20 +50,39 @@
         {{item.name}}
       </view>
     </view>
-    <view class='highlight_list'>
-      <view class='highlight {{hlcurIndex===index?"active":""}}' wx:for='{{highlight}}' bindtap='selected_hl' data-hlindex="{{index}}" data-curid="{{item.id}}" wx:key="{{index}}">
-        {{item.name}}
+    <view class='must_tiyan' wx:if="{{mcurIndex===0}}">
+      <view class='highlight_list'>
+        <view class='highlight {{hlcurIndex===index?"active":""}}' wx:for='{{highlight}}' bindtap='selected_hl' data-hlindex="{{index}}" data-curid="{{item.id}}" wx:key="{{index}}">
+          {{item.name}}
+        </view>
+      </view>
+      <view class='views'>
+        <view class='view' wx:for="{{cur_view}}">
+          <view class='view_item' wx:for="{{item}}">
+            <view class='img'>
+              <image src="{{item.imgURL}}"></image>
+            </view>
+            <view class='item_name'>{{item.name}}</view>
+            <view class='item_tourists'>{{item.tourists}}人体验过</view>
+            <view class="{{item.label.length===0?'':'label'}}" wx:for="{{item.label}}">{{item}}</view>
+          </view>
+        </view>
       </view>
     </view>
-    <view class='views'>
-      <view class='view' wx:for="{{cur_view}}">
-        <view class='view_item' wx:for="{{item}}">
-          <view class='img'>
-            <image src="{{item.imgURL}}"></image>
+    <view class='travel_guide' wx:if="{{mcurIndex===1}}">
+      <view class='travel_guide_content' wx:for="{{travel_guide}}">
+        <view class='tg_img'>
+          <image src='{{item.imgurl}}'></image>
+        </view>
+        <view class='tg_info'>
+          <view class='tg_info_title'>{{item.title}}</view>
+          <view class='tg_data'>
+            <view class='tg_info_read'>{{item.read}}浏览
+            </view>
+            <view class='dot' style='background-color: #000;border:2rpx solid #000; margin:0 5rpx'></view>
+            <view class='tg_info_collects'>{{item.collects}}收藏
+            </view>
           </view>
-          <view class='item_name'>{{item.name}}</view>
-          <view class='item_tourists'>{{item.tourists}}人体验过</view>
-          <view class="{{item.label.length===0?'':'label'}}" wx:for="{{item.label}}">{{item}}</view>
         </view>
       </view>
     </view>
