--- a/pages/main/index.wxss
+++ b/pages/main/index.wxss
@@ -1,13 +1,26 @@
 /**index.wxss**/
-page,.main{
+page,.main,.header_bdr,.list,.main_scro,.must_tiyan,image{
   height: 100%;
 }
-.header {
+.header,.menu_list,image,.views,.img,.travel_guide,.must_tiyan,.tg_data{
   width: 100%;
+}
+.downtips,.highlight,.view_item,.label,.tg_img,.tg_info_title,
+.tg_info,.tg_info_read,.tg_info_collects,.tg_data{
+  float: left;
+}
+.header_show,.header_show,.header_time,.header_showpeople,.header_avatars,.header_avatar{
+  float: right;
+}
+.header,.header_bdr,.header_title,.header_city,.menu_list,.tg_data{
+  display: flex;
+}
+.header,.highlight_list,.views,.view,.img,.main_scro,.tg_img,.travel_guide,.travel_guide_content{
+  overflow: hidden;
+}
+.header {
   height: 160rpx;
   background-color: #354a98;
-  display: flex;
-  overflow: hidden;
 }
 /* 
 view{
@@ -15,8 +28,6 @@ border: 1px solid black;
 } */
 
 .header_bdr {
-  height: 100%;
-  display: flex;
   justify-content: left;
   align-items: center;
 }
@@ -38,7 +49,6 @@ border: 1px solid black;
   font-size: 28rpx;
   color: #fff;
   opacity: 0.6;
-  display: flex;
   align-items: center;
 }
 
@@ -55,13 +65,11 @@ border: 1px solid black;
   color: #fff;
   font-size: 64rpx;
   padding-left: 24rpx;
-  display: flex;
   align-items: center;
 }
 
 .downtips {
   height: 0px;
-  float: left;
   border-left: 10rpx solid transparent;
   border-right: 10rpx solid transparent;
   border-top: 10rpx solid #eaeaea;
@@ -70,11 +78,9 @@ border: 1px solid black;
 
 .header_show {
   width: 59%;
-  float: right;
 }
 
 .header_time {
-  float: right;
   margin-right: 15px;
   background: #2a3c77;
   padding: 4rpx 10rpx;
@@ -88,7 +94,6 @@ border: 1px solid black;
   margin-right: 15px;
   width: 80%;
   text-align: right;
-  float: right;
   color: #fff;
   font-size: 28rpx;
 }
@@ -98,14 +103,12 @@ border: 1px solid black;
   width: 50%;
   height: 40rpx;
   margin-right: 15px;
-  float: right;
 }
 
 .header_avatar {
   border: 2rpx solid #fff;
   width: 50rpx;
   height: 50rpx;
-  float: right;
   border-radius: 50%;
   position: absolute;
 }
@@ -129,13 +132,10 @@ border: 1px solid black;
   right: 160rpx;
 }
 .menu_list {
-  width: 100%;
-  display: flex;
   border-bottom: 2rpx solid #eaeaea;
   margin-bottom: 20rpx;
 }
 .list {
-  height: 100%;
   padding:20rpx 0; 
   text-align: center;
   flex: 1;
@@ -149,10 +149,8 @@ border: 1px solid black;
 .highlight_list{
   width: 80%;
   margin-left: 20rpx;
-  overflow: hidden;
 }
 .highlight{
-  float: left;
   padding: 10rpx 24rpx;
   margin: 0 0 10rpx 10rpx;
   border-radius: 8rpx;
@@ -162,34 +160,23 @@ border: 1px solid black;
 .active{
   background-color: #ffe244;
 }
-image{
-  width:100%;
-  height:100%;
-}
 .views{
-  width: 100%;
-  overflow: hidden;
   margin-top: 20rpx;
 }
 .view{
   width: 720rpx;
-  overflow: hidden;
   margin-bottom: 30rpx;
   margin-left: 20rpx;
 }
 .view_item{
   width: 335rpx;
-  float: left;
   margin: 0 10rpx;
 }
 .img{
-  width: 100%;
   height: 237rpx;
   border-radius: 10rpx;
-  overflow: hidden;
 }
 .label{
-  float: left;
   font-size: 20rpx;
   border: 2rpx solid #ff7466;
   color: #ff7466;
@@ -206,9 +193,27 @@ image{
   color: #717476;
   margin-bottom: 6rpx;
 }
-
-.main_scro{
-  height: 100%;
-  overflow: hidden;
+.tg_img{
+  width: 190rpx;
+  height:130rpx;
+  margin-left: 30rpx;
+  border-radius: 10rpx;
+}
+.tg_info_title{
+  height: 80rpx;
+  font-size: 32rpx;
   
+}
+.travel_guide_content{
+  margin-bottom: 20rpx;
+}
+.tg_info{
+  width: 480rpx;
+  border-bottom: 2rpx solid #eaeaea;
+  margin-left: 24rpx;
+}
+.tg_data{
+  font-size: 22rpx;
+  margin: 20rpx 0;
+  align-items: center;
 }
