--- a/components/navbar/index.wxml
+++ b/components/navbar/index.wxml
@@ -1,11 +1,13 @@
 <view class='nav-wrap' style='height: {{height*2 + 20}}px; background:{{navbarData.backgroundColor}};'>
-  <view style="width:100%;height100%;opacity:{{navbarData.opacity}}">
+  <view style="width:100%;height:100%;opacity:{{navbarData.opacity}}">
     <!-- // 导航栏 中间的标题 -->
-    <view class="nav-city" style='margin-top:{{height*2 + 20-36}}px;' wx:if='{{navbarData.showMain}}'>
-      <text>{{navbarData.city}}</text>
-      <view class="downtips"></view>
-    </view>
-    <view class="section" style='top:{{height*2 + 20-34}}px;'wx:if='{{navbarData.showMain}}'>
+    <navigator url="/pages/destination/destination">
+      <view class="nav-city" style='margin-top:{{height*2 + 20-36}}px;' wx:if='{{navbarData.showMain}}'>
+        <text>{{navbarData.city}}</text>
+        <view class="downtips"></view>
+      </view>
+    </navigator>
+    <view class="section" style='top:{{height*2 + 20-34}}px;' wx:if='{{navbarData.showMain}}'>
       <view class='search_icon'>
         <icon type='search' size='14px'></icon>
       </view>
@@ -15,19 +17,15 @@
   <view wx:if="{{navbarData.title!=''}}" class='nav-title' style='line-height: {{height*2 + 44}}px;'>
     {{navbarData.title}}
   </view>
-  <view style='display: flex; justify-content: space-around;flex-direction: column'>
-    <!-- // 导航栏  左上角的返回按钮 和home按钮 -->
-    <!-- //  其中wx:if='{{navbarData.showCapsule}}' 是控制左上角按钮的显示隐藏，首页不显示 -->
-    <view class='nav-capsule' style='height: {{height*2 + 44}}px;' wx:if='{{navbarData.showCapsule}}'>
-      <!-- //左上角的返回按钮，wx:if='{{!share}}'空制返回按钮显示 -->
-      <!-- //从分享进入小程序时 返回上一级按钮不应该存在 -->
-      <view bindtap='_navback' wx:if='{{!share}}'>
-        <image src='/images/back.png' mode='aspectFill' class='back-pre'></image>
+  <block wx:if="{{navbarData.showCapsule===1}}">
+    <view class='nav'>
+      <view class='nav_back' bindtap="_navback">
+        <image src='/images/back.png'></image>
       </view>
-      <view class='navbar-v-line' wx:if='{{!share}}'></view>
-      <view bindtap='_backhome'>
-        <image src='/images/home.png' mode='aspectFill' class='back-home'></image>
-      </view>
+      <view class="line"></view>
+        <view class='nav_home' bindtap="_backhome">
+          <image src='/images/home.png'></image>
+        </view>
     </view>
-  </view>
+  </block>
 </view>
