--- a/components/navbar/index.wxss
+++ b/components/navbar/index.wxss
@@ -7,7 +7,6 @@
   color: #000;
   z-index: 9999999;
 }
-
 /* 标题要居中 */
 
 .nav-title {
@@ -26,35 +25,33 @@
   color: #2c2b2b;
   font-weight: 600;
 }
-
-.nav-capsule {
-  display: flex;
-  align-items: center;
-  margin-left: 30rpx;
-  width: 140rpx;
-  justify-content: space-between;
-  height: 100%;
+.nav{
+  position: absolute;
+  top: 28px;
+  left: 30rpx;
+  height: 60rpx;
+  overflow: hidden;
+  border: 1rpx solid #eeeeee;
+  border-radius: 30rpx;
 }
-
-.navbar-v-line {
-  width: 1px;
-  height:16px;
-  background-color: #000;
+.line{
+  float: left;
+  height: 30rpx;
+  margin-top:12rpx; 
+  border: 1rpx solid #eeeeee;
 }
-
-.back-pre, .back-home {
-  width: 16px;
-  height: 18px;
-  margin-top: 4rpx;
-  padding: 10rpx;
+.nav_back,.nav_home{
+  margin-top: 10rpx;
+  margin-left: 20rpx;
+  margin-right: 20rpx; 
+  width: 40rpx;
+  height:40rpx;
+  float: left;
 }
-
-.nav-capsule .back-home {
-  width: 18px;
-  height: 20px;
-  margin-top: 3rpx;
+image{
+  width: 100%;
+  height:100%;
 }
-
 .downtips {
   height: 0px;
   float: left;
