--- a/components/navbar/index.wxml
+++ b/components/navbar/index.wxml
@@ -1,13 +1,13 @@
 <view class='nav-wrap' style='height: {{height*2 + 20}}px; background:{{navbarData.backgroundColor}};'>
   <view style="width:100%;height:100%;opacity:{{navbarData.opacity}}">
     <!-- // 导航栏 中间的标题 -->
-    <navigator url="/pages/destination/destination">
+    <navigator url="/pages/destination/destination" hover-class="none">
       <view class="nav-city" style='margin-top:{{height*2 + 20-36}}px;' wx:if='{{navbarData.showMain}}'>
         <text>{{navbarData.city}}</text>
         <view class="downtips"></view>
       </view>
     </navigator>
-    <navigator url="/pages/search/search">
+    <navigator url="/pages/search/search" hover-class="none">
     <view class="section" style='top:{{height*2 + 20-34}}px;' wx:if='{{navbarData.showMain}}'>
       <view class='search_icon'>
         <icon type='search' size='14px'></icon>
