--- a/pages/mine/mine.wxml
+++ b/pages/mine/mine.wxml
@@ -1,16 +1,49 @@
-<!--pages/mine/mine.wxml-->
-<nav-bar navbar-data='{{navbarData}}' ></nav-bar>
+<!-- pages/mine/mine.wxml -->
+<nav-bar navbar-data='{{navbarData}}'></nav-bar>
 <view class='mine' style='margin-top:{{height}}px'>
   <view class='userInfo'>
     <view class='user_avatar'>
       <image src='/images/avatar.png'></image>
     </view>
     <view class='user_name'>{{userInfo.nickName}}</view>
-    <view class='user_level'><view class='user_level_bg'>1.LV</view></view>
+    <view class='user_level'>
+      <view class='user_level_bg'>1.LV</view>
+    </view>
   </view>
   <view class='collection'>
     <view class='title'>我的收藏</view>
-    <view class='collection_types'><view class='collection_type  {{curIndex===index?"on":""}}' wx:for="{{collection_type}}" data-index="{{index}}" bindtap='selected'>{{item.name}}</view></view>
-    <view class='collection_content' wx:for="{{collection_type.content}}"></view>
+    <view class='collection_types'>
+      <view class='collection_type  {{curIndex===index?"on":""}}' wx:for="{{collection_type}}" data-index="{{index}}" bindtap='selected'>
+        {{item.name}}
+      </view>
+    </view>
+    <view class='collection_content' data-name="{{item.name}}" wx:for="{{collection_type[0].content}}" bindtap="gotoScenicSpotDetail">
+      <view class='img'>
+        <image src="{{item.imgURL}}"></image>
+      </view>
+      <block wx:if="{{item.type=='view'}}">
+        <view class='view_name'>
+          <text>{{item.name}}</text>
+        </view>
+        <view class="view_ename">
+          <text>{{item.ename}}</text>
+        </view>
+        <view class='label'>
+          <view class='des_icon'>
+            <image src="/images/local.png"></image>
+          </view>
+          <view class='cityName'>
+            {{item.city_name}}
+          </view>
+        </view>
+      </block>
+      <block wx:else>
+        <view class='text'></view>
+        <view class='label'>
+          <view class='label_name'></view>
+        </view>
+      </block>
+      <view class='date'><text >收藏于2019-05-26</text></view>
+    </view>
   </view>
 </view>
